--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "express": "^4.18.0"
   },
   "devDependencies": {
-    "mocha": "^10.0.0",
+    "@eslint/js": "^9.28.0",
     "chai": "^4.3.0",
-    "eslint": "^8.0.0"
+    "eslint": "^8.57.1",
+    "globals": "^16.2.0",
+    "mocha": "^10.0.0"
   }
 }
