--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chai": "^4.3.0",
     "eslint": "^8.57.1",
     "globals": "^16.2.0",
-    "mocha": "^10.0.0"
+    "mocha": "^10.0.0",
+    "eslint-define-config": "^2.1.0"
   }
 }
