--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^8.57.1",
     "globals": "^16.2.0",
     "mocha": "^10.0.0",
-    "eslint-define-config": "^2.1.0"
+    "eslint-define-config": "^2.1.0",
+    "supertest": "^7.1.1"
   }
 }
