--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "mocha test/",
+    "test": "mocha test/ --reporter mocha-sonarqube-reporter --reporter-options output=test-result.xml",
     "lint": "eslint .",
     "build": "echo 'Build completed'"
   },
